--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/emoji.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Alondra Munoz - Therapist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Alondra Munoz</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/alondramunoz.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Alondra Munoz
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Therapist</div>
+        <p class="lead mb-4"> As a therapist, my mission with my clients is to never judge them for their background or their experiences. Instead, I intend to provide my clients with a safe space that they can release all their emotions in. Since, most people have trouble with opening up with others, I always want to ensure my clients that they are in a judgement-free zone. Evidently, it is not easy to instantly gain the trust of my client, therefore I must prove to them that I am the last person that is going to judge or critic them. My job as their therapist is not to judge them for their hardships in their life, but I am there to help them move past those hardships.I tend to work with a handful of clients that had the courage to share their stories with others before coming to me, however, those people were not professionally capable of providing with the advice and comfort that they needed. Because I have clients that come to me with these circumstances, it makes it harder for them to open up to me. They are under the impression that they are going to share their story again and not receive any help return.   <br><br>
 
-        Enter bio here<br><br>
+        Before becoming a professional therapist, my volunteer work began with working with kids that came from unstable homes. I was not neccesarily there to substitute for an actual therapist, but I was just there to provide them with company. At the beginning, the kids were only comfortable enough to talk amongst each other or with any staff that had been there for a while. It was not an easy process for the kids to open up me with, considering that I was an absolute stranger. However, compared to kids that do come from a stable household, they are more likely to engage with strangers at a faster rate. The kids that came from a unstable household were fearful of having to engage with strangers because of the possibility of being abandoned once again. It was a day by day process in order for the kids to show some engagement with the new volunteer workers. Slowly but surely, the kids became use to my daily presence and they began to engage with me.Obviously, I did not earn their trust as soon as they became welcoming of my presence. It first consisted of just being able to bond with them and let the time pass by. You could easily tell that they were beyond grateful for the company that we provided them. It was not until weeks later that the children would find themselves talking about their experiences at home. We were not allowed to ask them questions about their hardships, but we were just their to listen to them. Even though we were not providing them with advice or couseling them, they felt relieved that they could share this information with someone.   <br><br>
 
-        Enter bio here
+        After countless hours with these children, I landed myself another opportunity, where children could share their stories and I could respond back to them. I was still not at the point where I could provide them with professional help yet, but I was able to help them in my own unique way. For example, when I found myself with children that had anger issues, I would set up activities that would help them relieve that stress elsewhere. One of the activities that most of the children liked was painting. There were some of the children that transferred their emotions onto the paper in a calm manner and then there were other children that loved to get lost in their emotions. To explain, there were children that illustrated their stories onto paper, but then there were other children that loved to explode their emotions on the paper by splashing the colors everywhere. 
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/alondra6">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/alondramunoz6">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:youremail@gmail.com/amuno033@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +90,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Student Aid</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Kids of the Future</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Helped special need students with their work<br> 
+              • Experience with special needs students<br>
+              • I learned how to interact with them and how to calm them down<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,15 +105,15 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Sales Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Home Depot</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for providing customer service<br>t
+              • Maintained the department organized and clean<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">May 2019 - Present</span>
           </div>
         </div>
 
@@ -125,15 +123,15 @@
             <h3 class="mb-0">Teaching Assistant</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Held discussion<br>
+            • Graded the student's work<br>
+            • Helped the students with any course related work<br>
+            • Held office hours<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2018 - May 2019</span>
           </div>
         </div>
 
@@ -152,37 +150,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Psychology</div>
+            <div>Minor in Education</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2017 - June 2021</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +165,14 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Attachment-1 (2).jpeg" width="250px">
+            <br>
+            <img src="img/Attachment-1 (3).jpeg" width="250px">
+            <br> 
+            <img src="img/Attachment-1 (4).jpeg" width="250px">
+            <br>
+            <img src="img/Attachment-1 (5).jpeg" width="250px">
+            
         </center>
       </div>
     </section>
@@ -199,7 +180,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Alondra Munoz</center><br>
 
 
   </div>
